[gd_scene load_steps=25 format=3 uid="uid://5t3datngys13"]

[ext_resource type="Script" uid="uid://b63lr0k48anpf" path="res://Script/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://caidl5fqc2ge3" path="res://AssetBundle/Sprites/Foxy.png" id="1_l8h54"]
[ext_resource type="PackedScene" uid="uid://n1e5wivc2rgp" path="res://Bullet/bullet.tscn" id="2_btcbx"]
[ext_resource type="AudioStream" uid="uid://bbrykqmf1yxck" path="res://AssetBundle/Audio/Gun.mp3" id="4_gwnis"]
[ext_resource type="AudioStream" uid="uid://craqos4r0v3qk" path="res://AssetBundle/Audio/GameOver.mp3" id="5_k53q1"]
[ext_resource type="AudioStream" uid="uid://dght5amigqun8" path="res://AssetBundle/Audio/Running.mp3" id="6_fhl08"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("1_l8h54")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("1_l8h54")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("1_l8h54")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("1_l8h54")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("1_l8h54")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntmi"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("1_l8h54")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("1_l8h54")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("1_l8h54")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("1_l8h54")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("1_l8h54")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("1_l8h54")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("1_l8h54")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("1_l8h54")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fhl08"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}],
"loop": true,
"name": &"game_over",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q1")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ntmi"]
radius = 11.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animator")]
script = ExtResource("1_4ntmi")
move_speed = 100.0
animator = NodePath("AnimatedSprite2D")
bullet_scene = ExtResource("2_btcbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fhl08")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_4ntmi")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="gun_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gwnis")
volume_db = -25.0

[node name="Game_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_k53q1")
volume_db = -10.0
pitch_scale = 1.5

[node name="running" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fhl08")
volume_db = -10.0
pitch_scale = 1.5

[node name="RestarTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_fire"]
[connection signal="timeout" from="RestarTimer" to="." method="reload_scene"]
